added the /leagueManagment/ and /addGame, search by player Partial name ti the API, rearanged the /leaugeManagment part - means that Saif 11 done.
